composer/k8s/prometheus/config-map.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lv-sys
