composer/k8s/prometheus/service-account.yml
apiVersion: v1
kind: Namespace
metadata:
  name: lv-sys
