composer/k8s/prometheus/prometheus.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: lv-monitor
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
spec:
  selector:
    app: prometheus-server
  type: NodePort
  ports:
    - port: 8080
      targetPort: 9090
      nodePort: 30000
