composer/k8s/prometheus/full.yml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  namespace: monitoring
  labels:
    app: prometheus-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-server
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus
          args:
            - "--storage.tsdb.retention.time=12h"
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
          ports:
            - containerPort: 9090
          resources:
            requests:
              cpu: 500m
              memory: 500M
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            - name: prometheus-storage-volume
              mountPath: /prometheus/
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-server-conf

        - name: prometheus-storage-volume
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
spec:
  selector:
    app: prometheus-server
  type: NodePort
  ports:
    - port: 8080
      targetPort: 9090
      nodePort: 30100
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
spec:
  ingressClassName: nginx #nginx or lv-file-ingress
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/test-002"
            backend:
              service:
                name: prometheus-service
                port:
                  number: 8080

#  annotations:
#    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
#spec:
#  rules:
#    - http:
#        paths:
#        - backend:
#            service:
#              name: prometheus-server
#              port:
#                number: 9090
#          path: /prometheus(/|$)(.*)
#          pathType: Prefix
#spec:
#  ingressClassName: nginx
#  rules:
#    - http:
#        paths:
#          - path: /test-01
#            pathType: Prefix
#            backend:
#              service:
#                name: prometheus-server
#                port:
#                  number: 9090
  # Use the host you used in your kubernetes Ingress Configurations
#  - host: prometheus.example.com
#  - http:
#      paths:
#      - backend:
##          path: "/test-001"
##          serviceName: prometheus-service
##          servicePort: 81
#        - pathType: Prefix
#          path: "/test-01"
#          backend:
#            service:
#              name: prometheus-service
#              port:
#                number: 8001
